--- a/src/main/resources/templates/basic/items.html
+++ b/src/main/resources/templates/basic/items.html
@@ -33,7 +33,7 @@
             <tbody>
                 <tr th:each="item : ${items}">
                     <td><a th:href="@{/baisc/items/{itemId}(itemId=${item.id})}" th:text="${item.id}">회원id</a></td>
-                    <td><a th:href="@{|/baisc/items/${item.id}|}" th:text="${item.itemName}">상품명</a></td>
+                    <td><a th:href="@{|/basic/items/${item.id}|}" th:text="${item.itemName}">상품명</a></td>
                     <td th:text="${item.price}">10000</td>
                     <td th:text="${item.quantity}">10</td>
                 </tr>
